--- a/CloneNetflix/css/style.css
+++ b/CloneNetflix/css/style.css
@@ -1,18 +1,40 @@
+/* base */
 :root{
     --vermelho:#e50914; 
     --preto:#141414;
 }
 
-*{
-    margin: 0;
-    padding: 0;
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+    vertical-align: baseline;
     box-sizing: border-box;
 }
 
 body{
     background-color: var(--preto);
     font-family: 'Times New Roman', Times, serif;
-    color: #aaaaaa;
+    color: white;
 }
 
 header .container{
@@ -26,7 +48,7 @@ header .container{
 
 .logo{
     color: #e50914;
-    font-family: 'arial black';
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-size: 40px;
 }
 
@@ -34,4 +56,54 @@ header nav a{
     text-decoration: none;
     color: #aaaaaa;
     margin-right: 10px;
+    transition: 0.5s;
 }
+
+header nav a:hover{
+    color: white;
+}
+/* base */
+/* game principal */
+.game-pricipal{
+    font-size: 16px;
+    background:linear-gradient(rgba(0,0,0,0.5),rgba(0, 0, 0, 0.5)100%), url(https://wallpapercave.com/wp/Erq18Gj.jpg);
+    height: 500px;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+.game-pricipal .titulo{
+    font-size: 40px;
+    font-family: impact;
+
+}
+
+.game-pricipal .descricao{
+    margin-top: 3vh;
+    margin-bottom: 10vh;
+    text-align: justify;
+
+}
+
+.botao{
+    
+    border:none;
+    background-color: rgba(0, 0, 0, 0.253);
+    color: white;
+
+    padding: 20px 50px;
+    margin-right: 5%;
+    border-radius: 9px;
+    font-size: 20px;
+    cursor: pointer;
+    transition: 0.5s;
+}
+
+.botao:hover{
+    background: rgba(255, 255, 255, 0.356);
+    color: black;
+}
+/* game principal */
