--- a/CloneNetflix/css/style.css
+++ b/CloneNetflix/css/style.css
@@ -94,7 +94,7 @@ header nav a:hover{
     background-color: rgba(0, 0, 0, 0.253);
     color: white;
 
-    padding: 20px 50px;
+    padding: 20px;
     margin-right: 5%;
     border-radius: 9px;
     font-size: 16px;
